# fan-control

./: Cargo.toml  fan-control.service  fancontrol.service  readme.md
.cargo/: config.toml
cargo/: config.toml
src/: config.rs  main.rs  main_tests.rs
