[package]
name = "fan_control"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.4", features = ["termination"] }
rppal = "0.18"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"
xdg = "2.5.2"
