[package]
name = "fan_control"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.5", features = ["termination"] }
rppal = "0.19"
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"
xdg = "2.5.2"
