[package]
name = "fan-control"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4", features = ["termination"] }
rppal = "0.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xdg = "2.5"
